--- a/page1.html
+++ b/page1.html
@@ -387,6 +387,7 @@ var iframe = document.getElementById('myIframe');
                 if (stop){stop=false;document.querySelector('#start').textContent="Start";downloadAsXlsx(projectName);return}
                 currentlink=link+""
                 ii++
+                if(i%250==0){document.querySelector('#download').click()}
                 nextlink=links[ii]
                 //localStorage.setItem(projectName,{'projectName':projectName,"links":links,"selectors":selectors,"awaitedelement":awaitedelement,"nextlink":nextlink})
                 localStorageDict={'projectName':projectName,"links":links,"selectors":selectors,"awaitedelement":awaitedelement,"nextlink":nextlink}
