--- a/page3.html
+++ b/page3.html
@@ -327,7 +327,7 @@ text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Modern shadow effect */
             <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
                 <div class="container px-5">
                     <a class="navbar-brand fw-bold" href="https://barmga.com/">
-                    <img src="images/barmga-logo.png" alt="Logo" style="max-height:35px;"></a>
+                    <img src="https://barmga.com/images/barmga-logo.png" alt="Logo" style="max-height:35px;"></a>
                     <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa fa-th-list" style="color:#2780B7;"></i>
                     </button>
@@ -349,7 +349,7 @@ text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Modern shadow effect */
                         <ul class="navbar-nav ms-auto" style="display: block;" >
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/gb.png" style="max-height: 17px; max-width: 23px;">
+                                    <img src="https://barmga.com/images/gb.png" style="max-height: 17px; max-width: 23px;">
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="https://barmga.com/">English</a></li>
@@ -447,7 +447,7 @@ text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Modern shadow effect */
                         <small class="position-relative submitted" style="align-items: center; color: rgb(117, 247, 117);"></small>
                     </div>
                     <div class="col-md-6 text-center mb-n5 d-none d-md-block">
-                        <img class="img-fluid mt-5" style="height: 250px;" src="images/newsletter.png">
+                        <img class="img-fluid mt-5" style="height: 250px;" src="https://barmga.com/images/newsletter.png">
                     </div>
                 </div>
             </div>
@@ -624,7 +624,7 @@ text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Modern shadow effect */
                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   <h5 class="modal-title" id="termsModalLabel">&nbsp;&nbsp;&nbsp;&nbsp;Email Links</h5>
                   <div style="flex-grow: 1;"></div>
-                  <a id="fixedButton" class="btn shadow-sm" style="background-color: #7db3ed;" onclick="clickNextLink()"><img src="img/click.png"></a>
+                  <a id="fixedButton" class="btn shadow-sm" style="background-color: #7db3ed;" onclick="clickNextLink()"><img src="https://barmga.com/img/click.png"></a>
                   
                 </div>
                 <div class="modal-body scrollable-body">
@@ -775,15 +775,15 @@ text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Modern shadow effect */
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="https://barmga.com/lib/wow/wow.min.js"></script>
+    <script src="https://barmga.com/lib/easing/easing.min.js"></script>
+    <script src="https://barmga.com/lib/waypoints/waypoints.min.js"></script>
+    <script src="https://barmga.com/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://barmga.com/lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="https://barmga.com/lib/lightbox/js/lightbox.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="https://barmga.com/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
 
 <script>
