--- a/page3.html
+++ b/page3.html
@@ -3,20 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bulk Email Links Generator</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Barmga, Personal Development, Business Development, Educational Content, Tools, Resources, Learning">
+    <title>dow</title>
 
-    <meta name="description" content="This free tool helps you send bulk email messages only with button clicks! Transform all email addresses to bulk email links with message and subject attached. Send every message with two button clicks! ">
-    <meta property="og:title" content="Barmga | Bulk Email Links Generator" />
-    <meta property="og:description" content="This free tool helps you send bulk email messages only with button clicks! Transform all email addresses to bulk email links with message and subject attached. Send every message with two button clicks! " />
-    <meta property="og:image" content="images/barmga.png" />
-    <meta property="og:url" content="https://barmga.com/bulk-email-links" />
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-    <!-- Favicon -->
-
-
-    <link rel="icon" type="image/x-icon" href="images/logo.png" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
